add  colors and pictures

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
       rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&family=Nuosu+SIL&display=swap"
+      rel="stylesheet">
+
   </head>
 
 
@@ -34,6 +42,7 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
+
 
   </body>
 </html>
