--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,21 @@
     <title>Mentor Bootstrap Template - Index</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/assets/img/favicon.png" rel="icon">
+    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet">
-    <link href="assets/css/vendor/bootstrap/css/bootstrap.min.css"
+    <link href="/assets/css/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet">
-    <link href="assets/css/vendor/bootstrap-icons/bootstrap-icons.css"
+    <link href="/assets/css/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet">
-    <link href="assets/css/vendor/boxicons/css/boxicons.min.css"
+    <link href="/assets/css/vendor/boxicons/css/boxicons.min.css"
       rel="stylesheet">
-    <link href="assets/css/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/css/vendor/swiper/swiper-bundle.min.css"
+    <link href="/assets/css/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="/assets/css/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
 
@@ -37,11 +37,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="assets/vendor/purecounter/purecounter.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="/assets/vendor/purecounter/purecounter.js"></script>
+    <script src="/assets/vendor/aos/aos.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/vendor/php-email-form/validate.js"></script>
 
 
   </body>
